reportes semanales, mensuales y quincenales de febrero

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -126,6 +126,14 @@
 
             <div class="element usuarios semanal Febrero-2013" >
               <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130221-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de febrero</p>
+            </div> 
+
+            <div class="element usuarios semanal Febrero-2013" >
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130214-20130221.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -207,7 +215,23 @@
             <!-- USUARIOS QUINCENALES -->
 
             <div class="element usuarios quincenal Febrero-2013" >
-              <p> Usuarios</p>
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130215-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 28 de febrero</p>
+            </div>
+
+            <div class="element usuarios quincenal Febrero-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130201-20130215.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de febrero</p>
+            </div>
+
+            <div class="element usuarios quincenal Febrero-2013" >
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130201-20130215.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -215,7 +239,7 @@
             </div>
 
             <div class="element usuarios quincenal Enero-2013" >
-              <p> Usuarios</p>
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130115-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -223,7 +247,7 @@
             </div>
 
             <div class="element usuarios quincenal Enero-2013" >
-              <p> Usuarios</p>
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130101-20130115.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -231,7 +255,7 @@
             </div>
 
             <div class="element usuarios quincenal Diciembre-2012" >
-              <p> Usuarios</p>
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20121215-20121231.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -239,6 +263,14 @@
             </div>
 
             <!-- USUARIOS MENSUALES -->
+
+            <div class="element usuarios mensual Febrero-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130201-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 28 de febrero</p>
+            </div>
 
             <div class="element usuarios mensual Enero-2013" >
               <p> Usuarios</p>
@@ -259,6 +291,14 @@
             <!-- POSTS SEMANALES -->
 
             <div class="element posts semanal Febrero-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130221-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de febrero</p>
+            </div>
+
+            <div class="element posts semanal Febrero-2013" >
               <p> Posts</p>
               <a href="http://50.116.21.144/posts-20130214-20130221.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
@@ -267,7 +307,7 @@
             </div>
 
             <div class="element posts semanal Febrero-2013" >
-              <p> Posts</p>
+              <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130207-20130214.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -339,6 +379,14 @@
             </div>
 
             <!-- POSTS QUINCENALES -->
+
+            <div class="element posts quincenal Febrero-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130215-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 28 de febrero</p>
+            </div>
              
             <div class="element posts quincenal Febrero-2013" >
               <p> Posts </p>
@@ -374,6 +422,14 @@
 
             <!-- POSTS MENSUALES -->
 
+            <div class="element posts mensual Febrero-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130201-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 28 de febrero</p>
+            </div>
+
             <div class="element posts mensual Enero-2013" >
               <p> Posts </p>
               <a href="http://50.116.21.144/posts-20130101-20130131.csv">
@@ -391,6 +447,14 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+            <div class="element logins semanal Febrero-2013" >
+              <p>Logins </p>
+              <a href="http://50.116.21.144/logins-20130221-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de febrero</p>
+            </div>
 
             <div class="element logins semanal Febrero-2013" >
               <p>Logins </p>
@@ -425,7 +489,7 @@
             </div>
 
             <div class="element logins semanal Enero-2013" > 
-              <p> Logins </p>
+              <p>Logins</p>
               <a href="http://50.116.21.144/logins-20130117-20130124.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -473,6 +537,14 @@
             </div>
 
             <!-- LOGINS QUINCENALES -->
+            
+            <div class="element logins quincenal Febrero-2013" >
+              <p>Logins</p>
+              <a href="http://50.116.21.144/logins-20130215-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 28 de febrero</p>
+            </div>
 
             <div class="element logins quincenal Febrero-2013" >
               <p> Logins</p>
@@ -508,8 +580,16 @@
 
             <!-- LOGINS MENSUALES -->
 
+            <div class="element logins mensual Febrero-2013" >
+              <p>Logins</p>
+              <a href="http://50.116.21.144/logins-20130201-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 28 de enero</p>
+            </div>
+
             <div class="element logins mensual Enero-2013" >
-              <p> Logins</p>
+              <p>Logins</p>
               <a href="http://50.116.21.144/logins-20130101-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -525,6 +605,14 @@
             </div>
 
             <!-- DISPOSITIVOS SEMANAL -->
+
+            <div class="element dispositivos semanal Febrero-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130221-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de febrero</p>
+            </div>
 
             <div class="element dispositivos semanal Febrero-2013" >
               <p>Dispositivos</p>
@@ -610,6 +698,14 @@
 
             <div class="element dispositivos quincenal Febrero-2013" >
               <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130215-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 28 de febrero</p>
+            </div>
+
+            <div class="element dispositivos quincenal Febrero-2013" >
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130201-20130215.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -642,6 +738,14 @@
 
             <!-- DISPOSITIVOS MENSUAL -->
 
+            <div class="element dispositivos mensual Febrero-2013" >
+              <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130201-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 28 de febrero</p>
+            </div>
+
             <div class="element dispositivos mensual Enero-2013" >
               <p> Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130101-20130131.csv">
@@ -659,6 +763,14 @@
             </div>
 
             <!-- POST/COMENTARIOS -->
+
+            <div class="element post_comentarios semanal Febrero-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130221-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de febrero</p>
+            </div>
 
             <div class="element post_comentarios semanal Febrero-2013" >
               <p>Post/Comentarios</p>
@@ -744,6 +856,14 @@
 
             <div class="element post_comentarios quincenal Febrero-2013" >
               <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130215-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 28 de Febrero</p>
+            </div>
+
+            <div class="element post_comentarios quincenal Febrero-2013" >
+              <p>Post/Comentarios</p>
               <a href="http://50.116.21.144/most_commented-20130201-20130215.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -775,6 +895,14 @@
             </div>
 
             <!-- POST/COMENTARIOS MENSUAL -->
+
+            <div class="element post_comentarios mensual Febrero-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130201-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 28 de febrero</p>
+            </div>
 
             <div class="element post_comentarios mensual Enero-2013" >
               <p> Post/Comentarios</p>
