se cambio el nuevo banner y se agrego la parte de topusers supervisor

--- a/app/views/shared/_publicity.html.erb
+++ b/app/views/shared/_publicity.html.erb
@@ -1,1 +1,2 @@
-	<%= link_to image_tag("banner.png"), ' https://www.movistar.com.mx/duos-planes/?utm_source=movistar&utm_medium=bannerhero&utm_campaign=duosplanes', {:target => "_blank" } %>
+
+<%= link_to image_tag("banner.png"), 'www.movistar.com.mx', {:target => "_blank" } %>
