--- a/app/views/shared/_publicity.html.erb
+++ b/app/views/shared/_publicity.html.erb
@@ -1,2 +1,2 @@
 
-<%= link_to image_tag("banner.png"), 'www.movistar.com.mx', {:target => "_blank" } %>
+<%= link_to image_tag("banner.png"), 'https://www.movistar.com.mx', {:target => "_blank" } %>
