--- a/app/views/shared/_publicity.html.erb
+++ b/app/views/shared/_publicity.html.erb
@@ -1,2 +1,18 @@
-
-<%= link_to image_tag("banner.png"), 'https://www.movistar.com.mx', {:target => "_blank" } %>
+<% @top_users = TopUsers.last %>
+<table class= "zebra-striped">
+	<thead ><h2 style ="text-align:center;color: #00afc9;"> <%= @top_users.name %> </h2></thead>
+	 <tbody>
+	<% @top_users.rankings.each  do |ranking|%>
+ 		<tr>
+ 			<td>
+ 				<img alt="Student_xsmall" src="/assets/student_xsmall.png" width = "24px">
+ 			</td>
+ 			<td>
+ 				<%=ranking.user.name%>
+ 			</td>
+ 		</tr>
+	<% end %>
+	</tbody>
+</table>
+</br>
+<%= link_to image_tag("banner.png"), ' https://www.movistar.com.mx', {:target => "_blank" } %>
