se corrigio el error de no agregar el boton de eliminar dinamicamente

--- a/app/views/supervisor/top_users.html.erb
+++ b/app/views/supervisor/top_users.html.erb
@@ -108,13 +108,20 @@
         function addToFormTopUsers(user){
           if(!users[user.id]){
             $("#save_top_users").append(
-              '<li class="ui-top-users" style="display:block;">'+
+              '<li class="ui-top-users" style="display:block;" id="top-user-'+user.id+'">'+
                   '<input type="hidden" name="top_users[users][]" value="'+user.id+'">'+
                   '<img alt="Student_xsmall" src="/assets/student_xsmall.png" style="float:left; padding:0 20px 0 0;">'+
-                  '<p style="font-size:14px; padding-top:3px;">'+user.first_name+' '+ user.last_name+'</p>'+
+                  '<p style="font-size:14px; padding-top:3px;">'+
+                      user.first_name+' '+ user.last_name+
+                    '<input class="btn danger pull-right" type="button" id = "btn-top-user-delete-'+user.id+'" value="Eliminar">'+ 
+                  '</p>'+
                   '<div style="clear:both;"></div>'+
               '</li>'
             );
+              $('#btn-top-user-delete-'+user.id).on("click",function(){
+                $('#top-user-'+user.id).remove();
+              });
+                   
           }
           else{
             alert('Ese usuario ya esta agregado!');
