--- a/app/views/shared/_publicity.html.erb
+++ b/app/views/shared/_publicity.html.erb
@@ -1,4 +1,5 @@
 <% @top_users = TopUsers.last %>
+<% if @top_users %>
 <table class= "zebra-striped">
 	<thead ><h2 style ="text-align:center;color: #00afc9;"> <%= @top_users.name %> </h2></thead>
 	 <tbody>
@@ -15,4 +16,5 @@
 	</tbody>
 </table>
 </br>
+<% end %>
 <%= link_to image_tag("banner.png"), ' https://www.movistar.com.mx', {:target => "_blank" } %>
