Se cambio la url del banner

--- a/app/views/shared/_publicity.html.erb
+++ b/app/views/shared/_publicity.html.erb
@@ -17,4 +17,4 @@
 </table>
 </br>
 <% end %>
-<%= link_to image_tag("banner.png"), ' https://www.movistar.com.mx', {:target => "_blank" } %>
+<%= link_to image_tag("banner.png"), 'http://www.movistar.com.mx/prepago?utm_source=cursame&utm_medium=experto_movistar&utm_campaign=atributos2013_prepago', {:target => "_blank" } %>
