--- a/app/views/supervisor/top_users.html.erb
+++ b/app/views/supervisor/top_users.html.erb
@@ -45,7 +45,7 @@
                     <input class="btn danger pull-right" type="button" id = "btn-top-user-delete-<%= ranking.user_id%>" value="Eliminar">
                     <script>
                       users['<%= ranking.user_id%>']=true;
-                      
+
                       $('#btn-top-user-delete-<%= ranking.user_id%>').on('click',function(){
                         $("#top-user-<%= ranking.user_id%>").remove();   
                       });
@@ -67,7 +67,7 @@
 
 <script>
     $(function () {
-            maxNumUsers = 20,
+          var maxNumUsers = 20,
             selectedUser;
 
         $( "#save_top_users" ).sortable({
