--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -124,6 +124,14 @@
 
             <!-- USUARIOS SEMANAL -->
 
+            <div class="element usuarios semanal Marzo-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130228-20130307.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de febrero al 7 de marzo</p>
+            </div>
+
             <div class="element usuarios semanal Febrero-2013" >
               <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130221-20130228.csv">
@@ -290,6 +298,14 @@
 
             <!-- POSTS SEMANALES -->
 
+            <div class="element posts semanal Marzo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130228-20130307.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de febrero al 7 de marzo</p>
+            </div>
+
             <div class="element posts semanal Febrero-2013" >
               <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130221-20130228.csv">
@@ -447,6 +463,14 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+            <div class="element logins semanal Marzo-2013" >
+              <p>Logins </p>
+              <a href="http://50.116.21.144/logins-20130228-20130307.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de febrero al 7 de marzo</p>
+            </div>
 
             <div class="element logins semanal Febrero-2013" >
               <p>Logins </p>
@@ -606,6 +630,14 @@
 
             <!-- DISPOSITIVOS SEMANAL -->
 
+            <div class="element dispositivos semanal Marzo-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130228-20130307.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de febrero al 7 de marzo</p>
+            </div>
+
             <div class="element dispositivos semanal Febrero-2013" >
               <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130221-20130228.csv">
@@ -762,9 +794,23 @@
               <p>12 al 31 de enero</p>
             </div>
 
-            <!-- POST/COMENTARIOS -->
+            <!-- POST/COMENTARIOS SEMANAL -->
+
+            <div class="element post_comentarios semanal Marzo-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130228-20130307.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de febrero al 7 de marzo</p>
+            </div>
 
             <div class="element post_comentarios semanal Febrero-2013" >
+st/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130221-20130228.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de febrero</p>
+            </div>
               <p>Post/Comentarios</p>
               <a href="http://50.116.21.144/most_commented-20130221-20130228.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
