--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 
 <% if mobile? %>
-  <%= render :partial => "shared/mobile" %>
+	<%= render :partial => "shared/mobile" %>
 <% else%>
 <!DOCTYPE html>
 <html>
-<head> 
+<head>
   <meta charset="utf-8" />
   <title>Cúrsame</title>
   <%= stylesheet_link_tag    "application" %>
@@ -16,7 +16,6 @@
   <%= csrf_meta_tags %>
   <link rel="shortcut icon" href="/favicon.ico" />
   <%= yield :head %>
-  
 </head>
 <body>
 
@@ -33,31 +32,29 @@
 
   <!-- Google analythics -->
   <script type="text/javascript">
-
-         var _gaq = _gaq || [];
-         _gaq.push(['_setAccount', 'UA-34951436-1']);
-         _gaq.push(['_trackPageview']);
-
-         (function() {
-           var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-           ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-           var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-         })();
-
-  </script>
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-27929430-2']);
+    _gaq.push(['_setDomainName', '.cursa.me']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+   </script>
   <%= user_signed_in? ? render(:partial => "shared/topbar") : render(:partial => 'shared/topbar_with_login') %>
   <%=  render :partial => 'shared/flash', :locals => {:flash => flash} %>
-    <div class="container">
-  <% 
-  @notificaciones_admin_actualice = NotificacionesAdminActualouse.all
+  	<div class="container">
+	<% 
+	@notificaciones_admin_actualice = NotificacionesAdminActualouse.all
     @notificaciones_admin_actualice_last = NotificacionesAdminActualouse.last
-  %>
-  <%if user_signed_in? %>
-  <%#= render :partial => "notificaciones_admin_actualice/header_notification"%>
-  <%else%>
-  <%end%>
-   </div>
+	%>
+	<%if user_signed_in? %>
+	<%= render :partial => "notificaciones_admin_actualice/header_notification"%>
+	<%else%>
+	<%end%>
+	 </div>
   <%= yield %>
-
+	
 </html>
 <% end%>
