--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -126,6 +126,22 @@
 
             <div class="element usuarios semanal Marzo-2013" >
               <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130314-20130321.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de marzo</p>
+            </div>
+
+            <div class="element usuarios semanal Marzo-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130307-20130314.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 de marzo al 14 de marzo</p>
+            </div>
+
+            <div class="element usuarios semanal Marzo-2013" >
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130228-20130307.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -222,6 +238,14 @@
 
             <!-- USUARIOS QUINCENALES -->
 
+            <div class="element usuarios quincenal Marzo-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130301-20130315.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de marzo</p>
+            </div>
+
             <div class="element usuarios quincenal Febrero-2013" >
               <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130215-20130228.csv">
@@ -297,6 +321,22 @@
             </div>
 
             <!-- POSTS SEMANALES -->
+
+            <div class="element posts semanal Marzo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130314-20130321.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de marzo</p>
+            </div>
+
+            <div class="element posts semanal Marzo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130307-20130314.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 de marzo al 14 de marzo</p>
+            </div>
 
             <div class="element posts semanal Marzo-2013" >
               <p>Posts</p>
@@ -396,6 +436,14 @@
 
             <!-- POSTS QUINCENALES -->
 
+            <div class="element posts quincenal Marzo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130301-20130315.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de marzo</p>
+            </div>
+
             <div class="element posts quincenal Febrero-2013" >
               <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130215-20130228.csv">
@@ -405,7 +453,7 @@
             </div>
              
             <div class="element posts quincenal Febrero-2013" >
-              <p> Posts </p>
+              <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130201-20130215.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -413,7 +461,7 @@
             </div>
 
             <div class="element posts quincenal Enero-2013" >
-              <p> Posts </p>
+              <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130115-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -421,7 +469,7 @@
             </div>
 
             <div class="element posts quincenal Enero-2013" >
-              <p> Posts </p>
+              <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130101-20130115.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -429,7 +477,7 @@
             </div>
 
             <div class="element posts quincenal Diciembre-2012" >
-              <p> Posts </p>
+              <p>Posts</p>
               <a href="http://50.116.21.144/posts-20121215-20121231.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -443,7 +491,7 @@
               <a href="http://50.116.21.144/posts-20130201-20130228.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
-              <p>01 al 28 de febrero</p>
+              <p>1 al 28 de febrero</p>
             </div>
 
             <div class="element posts mensual Enero-2013" >
@@ -463,6 +511,22 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+            <div class="element logins semanal Marzo-2013" >
+              <p>Logins </p>
+              <a href="http://50.116.21.144/logins-20130314-20130321.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de marzo</p>
+            </div>
+
+            <div class="element logins semanal Marzo-2013" >
+              <p>Logins </p>
+              <a href="http://50.116.21.144/logins-20130307-20130314.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 al 14 de marzo</p>
+            </div>
 
             <div class="element logins semanal Marzo-2013" >
               <p>Logins </p>
@@ -561,6 +625,14 @@
             </div>
 
             <!-- LOGINS QUINCENALES -->
+
+            <div class="element logins quincenal Marzo-2013" >
+              <p>Logins</p>
+              <a href="http://50.116.21.144/logins-20130301-20130315.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de marzo</p>
+            </div>
             
             <div class="element logins quincenal Febrero-2013" >
               <p>Logins</p>
@@ -629,6 +701,22 @@
             </div>
 
             <!-- DISPOSITIVOS SEMANAL -->
+
+            <div class="element dispositivos semanal Marzo-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130314-20130321.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de marzo</p>
+            </div>
+
+            <div class="element dispositivos semanal Marzo-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130307-20130314.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 al 14 de marzo</p>
+            </div>
 
             <div class="element dispositivos semanal Marzo-2013" >
               <p>Dispositivos</p>
@@ -728,6 +816,14 @@
 
             <!-- DISPOSITIVOS QUINCENAL -->
 
+            <div class="element dispositivos quincenal Marzo-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130301-20130315.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de marzo</p>
+            </div>
+
             <div class="element dispositivos quincenal Febrero-2013" >
               <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130215-20130228.csv">
@@ -795,6 +891,22 @@
             </div>
 
             <!-- POST/COMENTARIOS SEMANAL -->
+
+            <div class="element post_comentarios semanal Marzo-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130314-20130321.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de marzo</p>
+            </div>
+
+            <div class="element post_comentarios semanal Marzo-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130307-20130314.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 al 14 de marzo</p>
+            </div>
 
             <div class="element post_comentarios semanal Marzo-2013" >
               <p>Post/Comentarios</p>
@@ -893,6 +1005,14 @@
             </div>
 
             <!-- POST/COMENTARIOS QUINCENAL -->
+
+            <div class="element post_comentarios quincenal Marzo-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130301-20130315.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de Marzo</p>
+            </div>
 
             <div class="element post_comentarios quincenal Febrero-2013" >
               <p>Post/Comentarios</p>
