--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,7 @@
         <div class="row">
           <div class="span4">
             <h2><%= @user.name %></h2>
-            <p class="description"><%= @user.role.gsub('student','telefonica').capitalize %></p>
+            <p class="description"><%= @user.role.gsub('student','movistar').capitalize %></p>
           </div>
           <div class="span5" style="margin-left:30px;">
             <% if current_user == @user %>
