--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -66,9 +66,10 @@ selected: #e0f5f8
   background-image: -o-linear-gradient(top, #62c462, #57a957);
   background-image: linear-gradient(top, #62c462, #57a957);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#62c462', endColorstr='#57a957', GradientType=0);
-  /*text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);*/
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #57a957 #57a957 #3d773d;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: #FFFFFF;
 }
 
 /* Pagination with Kaminari */
