Se agregan emoticons a los mensajes de los cuestionarios

--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="alert-message <%= key %>">
       <a class="close" href="#">&times;</a>
-      <p><%= val %></p>
+      <p><%= raw val %></p>
     </div>
   </div>
 <% end %>
